# pseudorandom

./: .travis.yml  copyright  pyproject.toml  readme.md  readme.py  setup.py  stdeb.cfg
.github/workflows/: run-unittests.yaml
_unittest/: test.py
dataframe/: __init__.py  _constraint.py  _dataframe.py  _enforce.py  tools.py
example/: data.csv  example.py
examples/: data.ods  data.xlsx  example-basic.py  example.py
pseudorandom/: __init__.py  _constraint.py  _dataframe.py  _enforce.py  _exceptions.py  py3compat.py  tools.py
qdataframe/: __init__.py  _action.py  _menu.py  _qcell.py  _qcelldelegate.py  _qdataframe.py  _qdataframetable.py  _qdropindicator.py  _qtableheader.py  _qtextimportdialog.py  _qtoolbuttons.py  pyqt.py
testcases/: test_main.py
